Add ngx-msagl component

--- a/src/app/components/app-root/app.component.html
+++ b/src/app/components/app-root/app.component.html
@@ -1,4 +1,5 @@
 <app-bar></app-bar>
 <section class="containerRoute">
+  <ngx-graph-msagl></ngx-graph-msagl>
   <router-outlet></router-outlet>
 </section>
