--- a/src/ngx-msagl-src/ngx-graph-msagl/ngx-graph-msagl.component.html
+++ b/src/ngx-msagl-src/ngx-graph-msagl/ngx-graph-msagl.component.html
@@ -1,81 +1,6 @@
 <ngx-graph
-  [links]="[
-    {
-      id: 'a',
-      source: 'a1',
-      target: 'a2'
-    },
-    {
-      id: 'b',
-      source: 'a2',
-      target: 'a3'
-    },
-    {
-      id: 'c',
-      source: 'a2',
-      target: 'a4'
-    },
-    {
-      id: 'd',
-      source: 'a1',
-      target: 'a5'
-    },
-    {
-      id: 'e',
-      source: 'a1',
-      target: 'a4'
-    },
-    {
-      id: 'f',
-      source: 'a1',
-      target: 'a3'
-    },
-    {
-      id: 'g',
-      source: 'a4',
-      target: 'a6'
-    },
-    {
-      id: 'h',
-      source: 'a1',
-      target: 'a6'
-    },
-    {
-      id: 'i',
-      source: 'a6',
-      target: 'a7'
-    }
-  ]"
-  [nodes]="[
-    {
-      id: 'a1',
-      label: 'N1'
-    },
-    {
-      id: 'a2',
-      label: 'N2'
-    },
-    {
-      id: 'a3',
-      label: 'N3'
-    },
-    {
-      id: 'a4',
-      label: 'N4'
-    },
-    {
-      id: 'a5',
-      label: 'N5'
-    },
-    {
-      id: 'a6',
-      label: 'N6'
-    },
-    {
-      id: 'a7',
-      label: 'N7'
-    }
-  ]"
+  [links]="links"
+  [nodes]="nodes"
   [layout]="layout"
   [curve]="curve"
   [nodeWidth]="20"
