node width and height

--- a/src/ngx-msagl-src/ngx-graph-msagl/ngx-graph-msagl.component.html
+++ b/src/ngx-msagl-src/ngx-graph-msagl/ngx-graph-msagl.component.html
@@ -5,8 +5,8 @@
   [layout]="useMsaglLayout ? msaglLayout : undefined"
   [curve]="curve"
   [enableZoom]="true"
-  [nodeWidth]="20"
-  [nodeHeight]="20"
+  [nodeWidth]="nodeWidth"
+  [nodeHeight]="nodeHeight"
   [draggingEnabled]="false"
   [autoZoom]="true"
 >
