new portal for ngx-msagl

--- a/src/app/app-component/app.component.scss
+++ b/src/app/app-component/app.component.scss
@@ -2,6 +2,11 @@ mat-toolbar {
   background-color: #1F233E;
   color: white;
   height: 36px;
+
+  button {
+    background-color: #1F233E;
+    color: white;
+  }
 }
 
 .menuTitle {
