Integration with dot files - part 1

--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,1 +1,6 @@
 <span>Welcome to ngx-msagl</span>
+<ngx-graph-msagl *ngIf="shouldShowGraph" 
+                 [nodes]="nodes" 
+                 [links]="links"
+                 [useMSAGLLayeredLayout]="true">
+</ngx-graph-msagl>
