--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -16,7 +16,7 @@
     </button>
     <button mat-button class="menu-button" routerLink="/example">
       <mat-icon>graphic_eq</mat-icon>
-      <span>Example</span>
+      <span>MDS Example</span>
     </button>
     <mat-divider></mat-divider>
     <button mat-button class="menu-button" routerLink="/help">
